test-suite/valid/edge-cases/trailing-comma-object.jyml
# Valid: trailing comma in object
{
  "name": "Alice",
  "age": 30,
}