test-suite/invalid/structure/duplicate-keys.jyml
# Invalid: duplicate keys in object
"name": "Alice"
"age": 25
"name": "Bob"